--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
                 </ul>
 
                 <img class= "beneficios-imgagem" src="img/beneficios.jpg">
+                <div class="video">
+                    ><iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
             </section>
         </main>
 
