--- a/index.html
+++ b/index.html
@@ -51,15 +51,17 @@
             <section id="beneficios">
                 <h3 class="titulo-principal">Beneficios</h3>
 
-                <ul>
-                    <li class="itens">Atendimento aos Clientes</li>
-                    <li class="itens">Espaço diferenciado</li>
-                    <li class="itens">Localização</li>
-                    <li class="itens">Profissionais qualificados</li>
-                </ul>
-
-                <img class= "beneficios-imgagem" src="img/beneficios.jpg">
-                <div class="video">
+                <div class="conteudo-beneficios">
+                    <ul class="lista-beneficios">
+                        <li class="itens">Atendimento aos Clientes</li>
+                        <li class="itens">Espaço diferenciado</li>
+                        <li class="itens">Localização</li>
+                        <li class="itens">Profissionais qualificados</li>
+                        <li class="itens">Pontualidade</li>
+                        <li class="itens">Limpeza</li>
+                    </ul><img class= "beneficios-imagem" src="img/beneficios.jpg">
+                </div>
+                <div class="video" >
                     ><iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </section>
